@@ -258,14 +258,14 @@ queryParams() {
      if [ $result = 'p' ]; then
          DB_DRIVER_JAR=$DBWRITER_PWD/lib/postgres-7.4.2.jar
          DB_TYPE="postgresql"
-         queryPostgres
+         queryPostgres 1
      elif [ $result = 'o' ]; then
          DB_TYPE=oracle
-         queryOracle
+         queryOracle 1
      elif [ $result = 'm' ]; then
          DB_DRIVER_JAR=$DBWRITER_PWD/lib/mysql-connector-java-3.1.14-bin.jar
          DB_TYPE="mysql"
-         queryMysql
+         queryMysql 1
      fi
 
      $CLEAR
