@@ -1,3 +1,8 @@
+AP-2008-07-09-0: Bugfix:      dbw install parameters are not verified
+                 Bugster:     6713362
+                 Issue:       2642
+                 Review:      JO
+
 JO-2008-06-19-0: Bugfix:      Wallclock_Time query should be more constrained
                  Bugster:     6715561
                  Issue:       2620
